Revert "LKE-9778 fix (plugins) Plugin Manager: Tab Labels are not correctly aligned on z-axis"

--- a/public/main.css
+++ b/public/main.css
@@ -88,7 +88,6 @@ body {
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  z-index: 1;
 }
 
 .tab-switch:checked+.tab-label {
